website/tests/snapshots/getting-started.exp
=== block 1 ===
Error ----------------------------------------------------------------------------- -:6:8

Cannot call `square` with `"2"` bound to `n` because string [1] is incompatible with number [2]. [incompatible-type]

   -:6:8
   6| square("2"); // Error!
             ^^^ [1]

References:
   -:2:20
   2| function square(n: number): number {
                         ^^^^^^ [2]


Found 1 error

=== block 2 ===
Error ---------------------------------------------------------------------------- -:4:12

Cannot return `x` because number [1] is incompatible with string [2]. [incompatible-type]

   -:4:12
   4|     return x; // Error
                 ^

References:
   -:2:18
   2| function foo(x: ?number): string {
                       ^^^^^^ [1]
   -:2:27
   2| function foo(x: ?number): string {
                                ^^^^^^ [2]


Found 1 error
